# std-ext

./: .envrc  .gitignore  .gitmodules  README.org  destination.txt  flake.nix  index.html  index.xml  justfile  sitemap.xml  treefmt.toml  vast.yaml
.github/workflows/: checks.yaml
blockTypes/: default.nix  runnables.nix
categories/: index.xml
cells/_common/: library.nix
cells/_flow/: makekCargoMakeFlow.nix
cells/_lib/: extend.nix  library.nix
cells/_modules/: lib.nix  library.nix
cells/_templates/: library.nix  options.nix
cells/_writers/: cache_dir.patch  cliche.nix  library.nix  writeClicheApplication.nix  writeComoniconApplication.nix  writeConfigurationFromLang.nix  writeGlowDoc.nix  writePiplelineApplication.nix  writeShellApplication.nix
cells/automation/: configs.nix
cells/cargoMake/: devshellProfiles.nix
cells/cliche/: devshellProfiles.nix  pyproject.toml
cells/cliche/entrypoints/: default.nix
cells/cliche/entrypoints/example/: advanced.py  calculator.py  choice.py  default.nix  list_of_items.py
cells/common/: devshellProfiles.nix  nix-github-update.bash
cells/comonicon/: Manifest.toml  devshellProfiles.nix  mycmd.jl  packages.nix
cells/containers/: devshellProfiles.nix  lib.nix  library.nix
clades/: default.nix  files.nix  installables.nix  microvms.nix  mkFlow.nix
devshell/: channels-latest.nix  default.nix  flake.nix  github-soc-action.nix  tenzir-action.nix  update.nix  zeek-action.nix
docs/: config.toml
lock/: default.nix  flake.nix
posts/: index.html  index.xml
search/: index.html  index.xml
tags/: index.xml
(+390 files in other folders)
